search bar autocomplete

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>IFC | iPortal</title>
-    
+    <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2017.2.621/styles/kendo.common-material.min.css" />
+    <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2017.2.621/styles/kendo.material.min.css" />
+    <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2017.2.621/styles/kendo.material.mobile.min.css" />
     <link href="css/style.css" rel="stylesheet">
     <link href="css/plugins/bootstrapTour/bootstrap-tour.min.css" rel="stylesheet">
 
@@ -632,6 +634,8 @@
    
    <!-- Bootstrap Tour -->
    <script src="js/plugins/bootstrapTour/bootstrap-tour.min.js"></script>
+   <!-- Kendo js plugins-->
+    <script src="https://kendo.cdn.telerik.com/2017.2.621/js/kendo.all.min.js"></script>
    
    <!-- Custom and plugin javascript -->
     <script src="js/plugins/metisMenu/jquery.metisMenu.js"></script>
