moved Kendo CSS styles into style.css ans style.scss

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
     <title>IFC | iPortal</title>
-    <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2017.2.621/styles/kendo.common-material.min.css" />
-    <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2017.2.621/styles/kendo.material.min.css" />
-    <link rel="stylesheet" href="https://kendo.cdn.telerik.com/2017.2.621/styles/kendo.material.mobile.min.css" />
+    
+    <!-- main css stylesheet that imports all the styles (see ../sass/style.scss for reference) -->
     <link href="css/style.css" rel="stylesheet">
-    <link href="css/plugins/bootstrapTour/bootstrap-tour.min.css" rel="stylesheet">
 
 </head>
 
